Fix production database config for Railway

--- a/config/database.yml
+++ b/config/database.yml
@@ -14,4 +14,8 @@ test:
 production:
   url: <%= ENV['DATABASE_URL'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
+  cable:
+    <<: *default
+    url: <%= ENV['DATABASE_URL'] %>
  
