Fix crash production database config for Railway

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,8 @@ production:
   url: <%= ENV['DATABASE_URL'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-  cable:
-    <<: *default
+   cable:
+    adapter: postgresql
     url: <%= ENV['DATABASE_URL'] %>
+    pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
  
