Fix crash production database config for Railway

--- a/config/database.yml
+++ b/config/database.yml
@@ -12,10 +12,11 @@ test:
   database: storage/test.sqlite3
 
 production:
+  adapter: postgresql
   url: <%= ENV['DATABASE_URL'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-   cable:
+  cable:
     adapter: postgresql
     url: <%= ENV['DATABASE_URL'] %>
     pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
