--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,11 @@ production:
   url: <%= ENV['DATABASE_URL'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
+  cache:
+    adapter: postgresql
+    url: <%= ENV['DATABASE_URL'] %>
+    pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
 cable:
     adapter: postgresql
     url: <%= ENV['DATABASE_URL'] %>
